CMAKE_MINIMUM_REQUIRED(VERSION 3.5 FATAL_ERROR)
ADD_SUBDIRECTORY(gtests)
ADD_SUBDIRECTORY(gbenchmark)
ADD_SUBDIRECTORY(rapidjson)

INCLUDE_DIRECTORIES(${GTEST_SRC_DIRS})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GBENCHMARK_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${RAPIDJSON_INCLUDE_DIR})

ADD_EXECUTABLE (tests tests.cpp )

IF(NOT WIN32)
	SET(CMAKE_CXX_FLAGS_COVERAGE "${CMAKE_CXX_FLAGS_DEBUG} --coverage")
	SET(CMAKE_EXE_LINKER_FLAGS_COVERAGE "${CMAKE_EXE_LINKER_FLAGS_DEBUG} --coverage")
	SET(CMAKE_SHARED_LINKER_FLAGS_COVERAGE "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} --coverage")
	MESSAGE("Generating coverage!!")
ENDIF()

LINK_DIRECTORIES(${GBENCHMARK_LIBS_DIR})

ADD_EXECUTABLE (benchmark_test benchmark.cpp )
ADD_DEPENDENCIES(benchmark_test gbenchmark rapidjson)
TARGET_LINK_LIBRARIES(benchmark_test debug benchmarkd optimized benchmark)

IF(WIN32)
	TARGET_LINK_LIBRARIES(benchmark_test Shlwapi.lib)
ENDIF()

IF(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x ")
	SET(THREADS_PREFER_PTHREAD_FLAG ON)
	FIND_PACKAGE(Threads REQUIRED)
	TARGET_LINK_LIBRARIES(tests Threads::Threads)
	TARGET_LINK_LIBRARIES(benchmark_test Threads::Threads)
ENDIF()

ADD_TEST(test1 tests)
ADD_DEPENDENCIES(tests googletest)
INSTALL(TARGETS tests DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../install/)
INSTALL(TARGETS benchmark_test DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../install/)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/test.json ${CMAKE_CURRENT_SOURCE_DIR}/data.json
		DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../install/)

